update git ignore file and add xml files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# Default ignored files
+/shelf/
+/workspace.xml
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -35,4 +39,5 @@ build/
 .vscode/
 
 ### Mac OS ###
-.DS_Store
+.DS_Store. i d e a
+
